Fixes column spacing on tablet mode and corrects the edit warehouse link

--- a/src/components/WarehouseList/WarehouseList.scss
+++ b/src/components/WarehouseList/WarehouseList.scss
@@ -112,7 +112,7 @@
 
     &__label-contact-info {
         @include tablet {
-            width: 23%;
+            width: 21%;
         }
     }
 
